<resources>
    <string name="app_name">My App Portifolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scores_app">Score App</string>
    <string name="library_app">Library App</string>
    <string name="built_it_bigger">Build It Bigger !</string>
    <string name="beacon_reader">Beacon Reader</string>
    <string name="capstone">Capstone : My Own App</string>
    <string name="movie_app">Movie App</string>
    <string name="my_title">My Nanodegree Apps</string>
</resources>
